--- a/studio-visitor-app/package.json
+++ b/studio-visitor-app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "studio-visitor-app",
+  "name": "capstone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
   "scripts": {
